--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="start-button">Comenzar Nuestro Viaje de Amor</button>
         <button id="hint-button">Pista de Amor</button>
     </div>
-    <audio id="heart-sound" src="heart_sound.mp3"></audio>
+    <audio id="heart-sound" src="https://www.youtube.com/watch?v=uC-aytBCmbE"></audio>
     <audio id="background-music" loop>
         <source src="romantic_music.mp3" type="audio/mpeg">
     </audio>
